fix: action buttons align right

--- a/packages/app/src/global.less
+++ b/packages/app/src/global.less
@@ -24,3 +24,9 @@
 .ant-page-header-footer {
   margin-top: 5px;
 }
+
+.button-group {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
